--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,20 +6,6 @@
     background: linear-gradient(#d7eaff, #ffe1ef);
 }
 
-.map {
-    position: relative;
-    padding-bottom: 26.25%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden;
-
-    iframe,
-    object,
-    embed {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+#map {
+    height: 500px;
 }
