--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
                         <a href="#facilities" class="font-medium text-gray-500 hover:text-gray-900">Facilities</a>
-                        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Staff</a>
+                        <a href="#staff" class="font-medium text-gray-500 hover:text-gray-900">Staff</a>
                         <a href="#faq" class="font-medium text-gray-500 hover:text-gray-900">FAQ</a>
                         <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Contact</a>
                     </div>
@@ -112,14 +112,14 @@
             <h2 class="text-3xl font-extrabold">Location</h2>
             <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
         </div>
-        <div id="map" style="width: 100%; height: 400px;"></div>
+        <div id="map" class="w-full"></div>
 
         <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
         {{ $key := getenv "GOOGLE_MAPS_API_KEY" }}
         <script>window.GOOGLE_MAPS_API_KEY = '{{ $key }}'</script>
 
         {{ $scripts := resources.Get "scripts/map.ts" }}
-        {{ $options := dict "minify" true }}
+        {{ $options := dict "minify" true "sourceMap" "inline" }}
         {{ $js := $scripts | js.Build $options }}
         <script src="{{ $js.RelPermalink }}"></script>
     </div>
@@ -167,22 +167,22 @@
             <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
         </div>
         <div class="grid grid-flow-row lg:grid-cols-3 gap-5">
-            <div class="shadow-md rounded-md p-8 m-2">
+            <div class="shadow-md rounded-md p-8 m-2 text-center">
                 {{ $image := resources.Get "images/icons/growth.png" }}
-                <img src="{{ $image.RelPermalink }} " class="mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-3">Growth & Development</h3>
+                <img src="{{ $image.RelPermalink }} " class="mx-auto mb-5">
+                <h3 class="text-xl font-bold mb-2">Growth & Development</h3>
                 <p class="text-gray-500">Our programs are focused on supporting your child’s overall development. Your child will participate in a variety of age-appropriate activities that are educational, engaging and most importantly&ndash;fun!</p>
             </div>
-            <div class="shadow-md rounded-md p-8 m-2">
+            <div class="shadow-md rounded-md p-8 m-2 text-center">
                 {{ $image := resources.Get "images/icons/academic.png" }}
-                <img src="{{ $image.RelPermalink }} " class="mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-3">Academic Advancement</h3>
+                <img src="{{ $image.RelPermalink }} " class="mx-auto mb-5">
+                <h3 class=" text-xl font-bold mb-2">Academic Advancement</h3>
                 <p class="text-gray-500">It’s never too early to set your child up for future success. With our French offerings, well-rounded curriculum, and home-away-from-home learning environment, your child will have the tools they need to thrive.</p>
             </div>
-            <div class="shadow-md rounded-md p-8 m-2">
+            <div class="shadow-md rounded-md p-8 m-2 text-center">
                 {{ $image := resources.Get "images/icons/confidence.png" }}
-                <img src="{{ $image.RelPermalink }} " class="mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-3">Confidence & Communication</h3>
+                <img src="{{ $image.RelPermalink }} " class="mx-auto mb-5">
+                <h3 class="text-xl font-bold mb-2">Confidence & Communication</h3>
                 <p class="text-gray-500">At daycare, children have the opportunity to socialize with both kids and adults. They’ll gain confidence, build their self-esteem, and gain interpersonal and communication skills for when they enter grade school.</p>
             </div>
         </div>
@@ -205,21 +205,40 @@
 </div>
 
 <div class="container px-4 mx-auto py-20">
-    <div class="text-center">
+    <div class="text-center pb-6">
         <h2 class="text-3xl font-extrabold" id="faq">FAQ</h2>
         <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
     </div>
     {{ range $.Site.Data.faq }}
-    <h5 class="text-pink-500 text-lg font-bold">{{ .question }}</h5>
-    <p class="pb-4 pt-1">{{ .answer }}</p>
+    <div class="mb-3">
+        <h5 class="text-pink-500 text-lg font-bold mb-1">{{ .question }}</h5>
+        <p>{{ .answer }}</p>
+    </div>
     {{ end }}
 </div>
 
-{{ partial "form.html" . }}
+<div class="container px-4 mx-auto py-20">
+    <div class="text-center pb-6">
+        <h2 class="text-3xl font-extrabold" id="staff">Our Team</h2>
+        <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
+    </div>
+    <div class="grid grid-flow-row lg:grid-cols-2 gap-5">
+        {{ range $.Site.Data.staff }}
+        {{ partial "staff.html" . }}
+        {{ end }}
+    </div>
+</div>
 
-<!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/directoraurora/30min-facility-tour?hide_event_type_details=1&hide_gdpr_banner=1" style="min-width:320px;height:630px;"></div>
-<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-<!-- Calendly inline widget end -->
+<div class="container mx-auto">
+    <div class="grid grid-flow-row lg:grid-cols-2">
+        {{ partial "form.html" . }}
+        <div>
+            <!-- Calendly inline widget begin -->
+            <div class="calendly-inline-widget" data-url="https://calendly.com/directoraurora/30min-facility-tour?hide_event_type_details=1&hide_gdpr_banner=1" style="height:700px;"></div>
+            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+            <!-- Calendly inline widget end -->
+        </div>
+    </div>
+</div>
 
 {{ end }}
