--- a/layouts/partials/program.html
+++ b/layouts/partials/program.html
@@ -2,8 +2,16 @@
     {{ $img := resources.Get .image }}
     <img src="{{ $img.RelPermalink }}" alt="">
     <div class="p-6">
-        <h3 class="text-2xl font-bold mb-1">{{ .name }}</h3>
-        <h4 class="text-pink-500 text-lg font-bold">{{ htmlUnescape .age_range }}</h4>
-        <p class="pt-3">{{ .description }}</p>
+        <h3 class="text-2xl font-bold mb-1">
+            {{ htmlUnescape .name }}
+        </h3>
+        {{ if .age_range }}
+        <h4 class="text-pink-500 text-lg font-bold">
+            {{ htmlUnescape .age_range }}
+        </h4>
+        {{ end }}
+        <p class="pt-3">
+            {{ htmlUnescape .description }}
+        </p>
     </div>
 </div>
