--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
 
-<!-- This example requires Tailwind CSS v2.0+ -->
 <div class="relative bg-white">
     <div class="max-w-7xl mx-auto">
         <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+
             <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
                 <polygon points="50,0 100,0 50,100 0,100" />
             </svg>
@@ -75,6 +75,7 @@
                 </div>
             </div>
 
+
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-700 sm:text-5xl md:text-6xl">
@@ -135,13 +136,18 @@
     </div>
 </div>
 
-<div class="py-20">
-    <div class="container px-4 mx-auto">
-        <div class="grid grid-cols-3 gap-6">
-            <div class="col-span-1">
-                <img src="/about.png" alt="">
-            </div>
-            <div class="col-span-2">
+<div class="container mx-auto">
+    <div class="grid grid-rows-2 grid-cols-3">
+        <div class="transform scale-90 rotate-6 translate-y-14">
+            {{ $img := resources.Get "images/untitled-280.jpg" }}
+            <img src="{{ $img.RelPermalink }}" alt="" class="rounded-lg shadow">
+        </div>
+        <div class="col-start-1 transform scale-75 -rotate-6 translate-x-2 -translate-y-14">
+            {{ $img := resources.Get "images/untitled-606.jpg" }}
+            <img src="{{ $img.RelPermalink }}" alt="" class="rounded-lg shadow">
+        </div>
+        <div class="col-span-2 row-span-2 row-start-1 col-start-2 ml-10">
+            <div class="h-full flex flex-col align-middle justify-center">
                 <h2 class="text-3xl font-extrabold">About Angelic Treasures Child Care</h2>
                 <div class="bg-pink-600 pt-1 mt-2 mb-4 w-20"></div>
                 <p class="text-gray-600 mb-2">Angelic Treasures Child Care is where quality child care and education meets family values. From French offerings to age-appropriate activities, we offer an array of programs focused on your child’s social, cognitive, emotional, psychological, and physical development. Plus, we provide an unparalleled home-away-from-home environment to ensure your child has an enjoyable and comfortable learning experience.</p>
@@ -182,7 +188,6 @@
         </div>
     </div>
 </div>
-
 
 <div class="bg-gradient py-20">
     <div class="container px-4 mx-auto">
