--- a/layouts/section/camp.html
+++ b/layouts/section/camp.html
@@ -20,8 +20,16 @@
             <img src="{{ $img.RelPermalink }}" alt="Picture of baby" class="object-cover block w-full">
         </picture>
     </div>
-    <div class="relative z-10">
-        <input type="text" class="bg-white rounded-lg">
+    <div class="absolute z-10 bottom-0 inset-x-0">
+        <div class="container mx-auto text-center py-5">
+            <h1 class="text-5xl font-bold text-white mb-5">Angelic Treasures <span class="text-blue-500">Daycamp</span></h1>
+            <form class="flex w-full max-w-sm mx-auto space-x-3">
+                <input class="flex-1 appearance-none border border-transparent w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-md rounded-lg text-base focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
+                <button class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-purple-200">
+                    Sign up
+                </button>
+            </form>
+        </div>
     </div>
 </div>
 
