--- a/layouts/camp/section.html
+++ b/layouts/camp/section.html
@@ -53,20 +53,22 @@
     </div>
 </div>
 
-<div class="container px-4 mx-auto pb-20">
-    <div class="text-center pb-6">
-        <h2 class="main-heading">Leadership Team</h2>
-        <div class="divider mx-auto"></div>
-    </div>
-    <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
-        {{ range $.Site.Data.staff }}
-        {{ partial "staff" . }}
-        {{ end }}
+<div class="bg-gradient py-20">
+    <div class="container px-4 mx-auto">
+        <div class="text-center pb-6">
+            <h2 class="main-heading">Leadership Team</h2>
+            <div class="divider mx-auto"></div>
+        </div>
+        <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
+            {{ range $.Site.Data.staff }}
+            {{ partial "staff" . }}
+            {{ end }}
+        </div>
     </div>
 </div>
 
-<div class="bg-gradient py-20" id="menu">
-    <div class="container mx-auto px-4">
+<div class="py-20">
+    <div class="container px-4 mx-auto">
         <div class="text-center pb-6">
             <h2 class="main-heading">Program Itinerary</h2>
             <div class="divider mx-auto"></div>
@@ -74,7 +76,12 @@
         <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
             {{ partial "camp/itenerary2" . }}
         </div>
-        <div class="text-center pb-6 mt-20">
+    </div>
+</div>
+
+<div class="bg-gradient py-20" id="menu">
+    <div class="container mx-auto px-4">
+        <div class="text-center pb-6">
             <h2 class="main-heading">Meal Plan</h2>
             <div class="divider mx-auto"></div>
         </div>
