--- a/layouts/daycamp/section.html
+++ b/layouts/daycamp/section.html
@@ -2,33 +2,36 @@
 
 {{ .Content }}
 
-<div class="container bg-white mx-auto py-5">
+<div class="container px-4 bg-white mx-auto py-5">
     {{ $logo := resources.Get "images/logo.png" }}
     <a href="/">
-        <span class="sr-only">Workflow</span>
         <img class="h-8 w-auto sm:h-10" src="{{ $logo.RelPermalink }}">
     </a>
 </div>
 
-<div class="h-96 relative">
+<div class="relative h-96" style="height: 36rem;">
     <div class="h-full overflow-hidden absolute inset-x-0 z-0">
         <picture class="flex w-full h-full">
-            {{ $hero := resources.Get "images/hero2.jpg" }}
-            {{ $img := $hero.Resize "1600x webp" }}
+            {{ $hero := resources.Get "images/camp-hero.jpg" }}
+            {{ $img := $hero.Resize "1920x webp" }}
             <source srcset="{{ $img.RelPermalink }}" type="image/webp" class="object-cover">
-            {{ $img := $hero.Resize "1600x" }}
+            {{ $img := $hero.Resize "1920x" }}
             <img src="{{ $img.RelPermalink }}" alt="Picture of baby" class="object-cover block w-full">
         </picture>
     </div>
     <div class="absolute z-10 bottom-0 inset-x-0">
         <div class="container mx-auto text-center py-5">
-            <h1 class="text-5xl font-bold text-white mb-5">Angelic Treasures <span class="text-blue-500">Daycamp</span></h1>
+            <h1 class="text-5xl font-bold text-white mb-5">
+                Angelic Treasures <span class="text-blue-500">Daycamp</span>
+            </h1>
+            <!--
             <form class="flex w-full max-w-sm mx-auto space-x-3">
                 <input class="flex-1 appearance-none border border-transparent w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-md rounded-lg text-base focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
                 <button class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-purple-200">
                     Sign up
                 </button>
             </form>
+            -->
         </div>
     </div>
 </div>
@@ -74,12 +77,12 @@
             <div class="divider mx-auto"></div>
         </div>
         <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-            {{ partial "camp/itenerary2" . }}
+            {{ partial "camp/itenerary" . }}
         </div>
     </div>
 </div>
 
-<div class="bg-gradient py-20" id="menu">
+<div class="pb-20" id="menu">
     <div class="container mx-auto px-4">
         <div class="text-center pb-6">
             <h2 class="main-heading">Meal Plan</h2>
@@ -91,8 +94,22 @@
     </div>
 </div>
 
+<div class="bg-gradient py-20" id="facilities">
+    <div class="container px-4 mx-auto">
+        <div class="text-center pb-6">
+            <h2 class="main-heading">See Our Facilities</h2>
+            <div class="divider mx-auto"></div>
+        </div>
+        <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-6">
+            {{ $images := resources.Match "images/facilities/*" }}
+            {{ range $i := $images }}
+            {{ partial "facility.html" . }}
+            {{ end }}
+        </div>
+    </div>
+</div>
 
-<div class="container mx-auto py-20" id="contact">
+<div class="container px-4 mx-auto py-20" id="contact">
     <div class="text-center pb-6">
         <h2 class="main-heading">Book a Tour</h2>
         <div class="divider mx-auto"></div>
