--- a/layouts/partials/camp/itenerary.html
+++ b/layouts/partials/camp/itenerary.html
@@ -5,40 +5,40 @@
             <th scope="col" class="py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Activity</th>
         </tr>
     </thead>
-    <tbody class="text-sm">
-        <tr class="bg-white">
+    <tbody class="text-sm bg-pink-50">
+        <tr>
             <td class="w-1/2 text-center font-medium">8:00AM</td>
             <td>Breakfast</td>
         </tr>
-        <tr class="bg-gray-50">
+        <tr class="bg-blue-50">
             <td class="w-1/2 text-center font-medium">9:00AM</td>
             <td>Chapel</td>
         </tr>
-        <tr class="bg-white">
+        <tr>
             <td class="w-1/2 text-center font-medium">9:30AM</td>
             <td>Arts and Crafts</td>
         </tr>
-        <tr class="bg-gray-50">
+        <tr class="bg-blue-50">
             <td class="w-1/2 text-center font-medium">11:00AM</td>
             <td>Outdoor Sports and Games</td>
         </tr>
-        <tr class="bg-white">
+        <tr>
             <td class="w-1/2 text-center font-medium">Noon</td>
             <td>Lunch</td>
         </tr>
-        <tr class="bg-gray-50">
+        <tr class="bg-blue-50">
             <td class="w-1/2 text-center font-medium">12:45PM</td>
             <td>Quiet Activities</td>
         </tr>
-        <tr class="bg-white">
+        <tr>
             <td class="w-1/2 text-center font-medium">2:30PM</td>
             <td>Afternoon Programming</td>
         </tr>
-        <tr class="bg-gray-50">
+        <tr class="bg-blue-50">
             <td class="w-1/2 text-center font-medium">3:30PM</td>
             <td>Snack</td>
         </tr>
-        <tr class="bg-white">
+        <tr>
             <td class="w-1/2 text-center font-medium">4:00PM</td>
             <td>Outdoor Play</td>
         </tr>
